--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
                   <div class="tm-double-border-2">
-                    <h1 class="tm-brand text-uppercase">Dream Pulse</h1>
+                    <h1 class="tm-brand text-uppercase">Abdul Moiz Hassan</h1>
                   </div>
                 </div>
               </div>
@@ -32,7 +32,7 @@
               <ul id="tmMainNav" class="nav flex-column text-uppercase text-right tm-main-nav">
                 <li class="nav-item">
                   <a href="#intro" class="nav-link active">
-                    <span class="d-inline-block mr-3">Intro</span>
+                    <span class="d-inline-block mr-3">Home</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
@@ -44,50 +44,38 @@
                 </li>
                 <li class="nav-item">
                   <a href="#work" class="nav-link">
-                    <span class="d-inline-block mr-3">Work</span>
+                    <span class="d-inline-block mr-3">Skills</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="#clients" class="nav-link">
-                    <span class="d-inline-block mr-3">Clients</span>
+                    <span class="d-inline-block mr-3">Projects</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="#talk" class="nav-link">
-                    <span class="d-inline-block mr-3">Let's Talk</span>
+                    <span class="d-inline-block mr-3">Contact</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
               </ul>
               <ul class="nav flex-row tm-social-links">
-                <li class="nav-item">
-                  <a href="https://facebook.com" class="nav-link tm-social-link">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a href="https://twitter.com" class="nav-link tm-social-link">
                     <i class="fab fa-twitter"></i>
                   </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                  <a href="https://dribbble.com" class="nav-link tm-social-link">
-                    <i class="fab fa-dribbble"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="https://linkedin.com" class="nav-link tm-social-link">
+                  <a href="https://www.linkedin.com/in/abdul-muizz-4702b476" class="nav-link tm-social-link">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
               </ul>
               <footer class="text-center text-white small">
-                <p class="mb--0 mb-2">Copyright 2020 Dream Pulse</p>
-                <p class="mb-0">Design:
-                  <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
-                </p>
+                <p class="mb--0 mb-2">© 2025 Abdul Moiz Hassan — Backend Developer</p>
+                <p class="mb-0">Template inspired by <a href="https://templatemo.com" target="_blank" class="tm-footer-link">TemplateMo</a></p>
               </footer>
             </div>
           </nav>
