--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div
               class="parallax-window"
               data-parallax="scroll"
-              data-image-src="img/dream-pulse-header.jpg">
+              data-image-src="img/header.avif">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
