--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </ul>
               <footer class="text-center text-white small">
                 <p class="mb--0 mb-2">© 2025 Abdul Moiz Hassan — Backend Developer</p>
-                <p class="mb-0">Template inspired by <a href="https://templatemo.com" target="_blank" class="tm-footer-link">TemplateMo</a></p>
+                <!-- <p class="mb-0">Template inspired by <a href="https://templatemo.com" target="_blank" class="tm-footer-link">TemplateMo</a></p> -->
               </footer>
             </div>
           </nav>
@@ -87,18 +87,18 @@
               data-image-src="img/header.avif">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-white-transparent tm-intro">
-                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing Dream Pulse</h2>
-                        <p class="tm-color-gray">
-                          This box alpha 30 percent. Left sidebar is a sticky element.
-                          Right side Contents are scrolling up and down. This background has a
-                          parallax effect.
-                        </p>
-                        <p class="mb-0 tm-color-gray">
-                          Dream Pulse is a Bootstrap 4.3.1 template designed for your websites. You can modify this layout as you like.
-                        </p>
-                    </div>              
-                </section>
+                  <div class="tm-bg-white-transparent tm-intro">
+                      <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Welcome to My Backend Developer Portfolio</h2>
+                      <p class="tm-color-gray">
+                          Hi! I'm Abdul Moiz, a passionate backend developer eager to learn and grow in the field of ASP.NET Core development. I’m currently building my skills in ASP.NET Core, focusing on creating efficient and scalable backend systems.
+                      </p>
+                      <p class="mb-0 tm-color-gray">
+                          While I am in the early stages of my career, I have gained a solid understanding of SQL Server and MySQL for database management and am continuously expanding my knowledge in PHP, Angular, and some other technologies.
+                      </p>
+                      <!-- <a href="#projects" class="btn btn-primary mt-4">View My Projects</a> CTA button to projects section -->
+                  </div>
+              </section>
+              
             </div>            
           </div>
 
