--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="#talk" class="nav-link">
+                  <a href="#contact" class="nav-link">
                     <span class="d-inline-block mr-3">Contact</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
@@ -261,27 +261,25 @@
 
             
         <div class="tm-section-wrap bg-white">
-  <section id="talk" class="row tm-section">
-    <div class="col-12">
-      <div class="tm-bg-white-transparent tm-section-pad">
-        <div class="container">
-          <div class="tm-double-border-1 tm-border-gray">
-            <div class="tm-double-border-2 tm-border-gray tm-box-pad">
-              <h2 class="tm-color-primary tm-section-title mb-4">Contact Information</h2>
-              <p class="mb-4">
-                You can reach out to me directly via WhatsApp or Email.
-              </p>
-              <p class="mb-3">
-                <strong>WhatsApp:</strong> <a href="https://wa.me/923463224382" target="_blank">+92 346 3224382</a><br>
-                <strong>Email:</strong> <a href="mailto:abdulmoizforaptech@gmail.com">abdulmoizforaptech@gmail.com</a>
-              </p>
+          <section id="contact" class="row tm-section">
+            <div class="col-12">
+              <div class="tm-bg-white-transparent tm-section-pad">
+                <div class="container">
+                  <div class="tm-double-border-1 tm-border-gray">
+                    <div class="tm-double-border-2 tm-border-gray tm-box-pad">
+                      <h2 class="tm-color-primary tm-section-title mb-4">Contact Information</h2>
+                      <p class="mb-4">You can reach out to me directly via WhatsApp or Email.</p>
+                      <p class="mb-3">
+                        <strong>WhatsApp:</strong> <a href="https://wa.me/923463224382" target="_blank">+92 346 3224382</a><br>
+                        <strong>Email:</strong> <a href="mailto:abdulmoizforaptech@gmail.com">abdulmoizforaptech@gmail.com</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
+          </section>
         </div>
-      </div>
-    </div>
-  </section>
-</div>
 
             
           <!-- <div class="tm-section-wrap bg-white">
